system notes update

--- a/blank.tex
+++ b/blank.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper,12pt]{report}
 
-\title{This page intentionally left blank}
+\title{System notes from http://www.matthew.ath.cx/misc/bridge}
 \date{}
 
 \begin{document}
