defences to natural intermediate/strong 2s

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -990,9 +990,11 @@ apply.
 \subsubsection{Natural stronger jump openings}
 \label{sec:def:inter-strong}
 
-Natural 2-level openings which are not forcing (intermediate/strong-non-forcing) the overcalls
-are as natural 1-level openings~\xref{sec:def:1x}, with 2N as modified unusual. All actions
-need to be sounder than over a 1-level opening.
+For intermediate 2-level openings the overcalls are as natural 1-level
+openings~\xref{sec:def:1x}, with 2N as modified unusual. All actions need to be
+sounder than over a 1-level opening.
+
+Strong (forcing or not) 2-level openings all overcalls are weak and natural.
 
 \subsubsection{Lightner Doubles}
 \label{sec:def:lightner}
