update long card, some more notes

--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -51,6 +51,23 @@ elsewhere in this document will be given as \xref{sec:resp:2level}.
 \item single-suited hands are all 6+ cards and deny a side 4-card suit.
 \end{itemize}
 
+\subsection{Hand evaluation}
+
+The descriptions below of particular bids will generally be in terms of point
+ranges. These are not a hard and fast rule, however. We will try and make the
+bid which describes the hand best. This main mean small deviations of strength, 
+particularly with extra shape. No-trump ranges are the least likely to vary and
+preemptive actions most likely.
+
+In order to determine whether a hand is game forcing (for example to open a
+distributional hand 1$\diamondsuit$ or at the two level) we generally
+rely on losing trick count. Three or fewer losing tricks is enough to be game
+forcing, occasionally 4 if there are also 9 clear cut tricks. This is just a
+guide, however, so might not strictly apply to all hands. The hands will,
+obviously, meet the extended rule of 25 in all cases.
+
+\newpage
+
 \subsection{Openings}
 \label{sec:openings}
 
@@ -273,7 +290,7 @@ Higher-level openings & natural. \\
       \item 3$\clubsuit$/$\diamondsuit$ weak, 3$\heartsuit$/$\spadesuit$ strong. 3$\clubsuit$/$\heartsuit$ better $\heartsuit$, 3$\diamondsuit$/$\spadesuit$ better $\spadesuit$.
 		\end{itemize}
    \item 3$\clubsuit$/$\diamondsuit$: strong, good suit.
-   \item 3$\heartsuit$/$\spadesuit$: good raise.
+   \item 3$\heartsuit$/$\spadesuit$: good raise, with exactly one of AK \xref{sec:enc:2way}.
 	\end{itemize}
 
 \newpage
@@ -565,6 +582,10 @@ We play a modified form of suction as the escape after 1NT-X.
 	\end{itemize}
 \end{itemize}
 
+This defence is played a level higher in the rare case of 2NT being doubled for
+penalties and applies in all cases that a natural notrump bid is doubled for
+penalties.
+
 \subsubsection{After direct overcalls of 1NT}
 \label{sec:resp:lebensohl}
 
@@ -588,6 +609,8 @@ Lebensohl:
 \item Double is for penalties
 \item Double of a natural 2$\clubsuit$ overcall is stayman showing a club stop (optional)
 \end{itemize}
+
+\newpage
 
 \subsection{Continuations after 2NT}
 \label{sec:resp:2n}
@@ -633,6 +656,8 @@ superaccept that still allows the use of Swiss.
 \item 4N: Quantitative
 \end{itemize}
 
+\newpage
+
 \section{Encrypted bidding}
 \label{sec:encryption}
 
@@ -673,6 +698,8 @@ the trump Q.
 Of course, Blackwood goes funny here too.  You only need to show 0--3 keycards,
 and the location of the Q is known, so 0--1--2--3 would seem a sensible set
 of responses.
+
+\newpage
 
 \section{Slam conventions}
 \label{sec:slam}
@@ -780,6 +807,8 @@ raise one level.
 If the hand bidding Swiss has shown a GF, add 2 to all numbers. If it has shown
 a weak hand (opening at the 2 level or giving a 0--7 response to 1$\diamondsuit$), subtract 2
 from all numbers.
+
+\newpage
 
 \section{Competitive bidding}
 \label{sec:competitive}
@@ -949,6 +978,8 @@ For example:
 	\end{itemize}
 \end{itemize}
 
+\newpage
+
 \subsection{Defences}
 \label{sec:defences}
 
@@ -1012,11 +1043,31 @@ apply.
 \subsubsection{Natural stronger jump openings}
 \label{sec:def:inter-strong}
 
-For intermediate 2-level openings the overcalls are as natural 1-level
+For intermediate natural 2-level openings the overcalls are as natural 1-level
 openings~\xref{sec:def:1x}, with 2N as modified unusual. All actions need to be
 sounder than over a 1-level opening.
 
-Strong (forcing or not) 2-level openings all overcalls are weak and natural.
+Strong (forcing or not) natural 2-level openings all overcalls are weak and natural.
+
+\subsubsection{Transfer openings}
+\label{sec:def:transfer}
+
+Including 2$\clubsuit$ which is a weak 2 in diamonds or a strong hand.
+
+\begin{itemize}
+\item Double shows the suit bid
+\item Bidding the transferred to suit is takeout of that suit
+\item Jump-bidding the transferred to suit is Michaels
+\item Other bids and continuations are as normal for that level and strength of bid
+\end{itemize}
+
+\subsubsection{Shortage preempts}
+
+\ldots
+
+\subsubsection{Other multi-way preempts}
+
+\ldots
 
 \subsubsection{Lightner Doubles}
 \label{sec:def:lightner}
@@ -1154,6 +1205,8 @@ A few general principles here:
    \item X/denied suit/NT = strong option (X is optional)
    \end{itemize}
 \end{itemize}
+
+\newpage
 
 \section{Carding}
 \label{sec:carding}
