--- a/systemnotes.tex
+++ b/systemnotes.tex
@@ -59,6 +59,12 @@ bid which describes the hand best. This main mean small deviations of strength,
 particularly with extra shape. No-trump ranges are the least likely to vary and
 preemptive actions most likely.
 
+Opening bids at the 1 level are 10--15. The lower limit is usually governed by
+the rule of 19 as much as the actual point count and some good 15 point hands
+may be upgraded to a 1$\diamondsuit$ opening. Losing trick count is also 
+useful for deciding when to upgrade. Upgraded hands will, obviously, meet the
+extended rule of 25 in all cases.
+
 In order to determine whether a hand is game forcing (for example to open a
 distributional hand 1$\diamondsuit$ or at the two level) we generally
 rely on losing trick count. Three or fewer losing tricks is enough to be game
